# agent-signal

./: .eslintignore  .eslintrc.yml  Agent.md  Anchor.toml  readme.md
client/sdk/: LICENSE  README.md  package.json
client/sdk/src/: constants.ts  index.ts  signal.game.ts  signal.program.ts  soar.program.ts
client/sdk/src/idl/: signal.ts  soar.ts
client/sdk/src/instructions/: accountsBuilder.ts  ixBuilder.ts  rawInstructions.ts
client/sdk/src/state/: achievement.ts  game.ts  leaderboard.ts  leaderboardTopEntries.ts  merged.ts  player.ts  playerAchievement.ts  playerScoresList.ts  reward.ts
client/tests/: soar.ts  tens.ts  utils.ts
client/tests/fixtures/metadata/: collection.json  test.json
crates/soar-cpi/: Cargo.toml  LICENSE  build.rs
crates/soar-cpi/src/: lib.rs
examples/tens/: Cargo.toml
examples/tens/src/: lib.rs
programs/signal/: Cargo.toml
programs/signal/src/instructions/: add_reward.rs  approve_merge.rs  claim_reward.rs  submit_score.rs
programs/signal/src/state/: check_fields.rs
programs/soar/src/: error.rs  lib.rs
programs/soar/src/instructions/: add_leaderboard.rs
scripts/: devnet-achievements-rewards.ts
web/: README.md  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
